se agrego carpeta de Manejo-css

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -7,13 +7,13 @@
 
     </head>
             <body>
-                <h1>concepto de git</h1>
+                <h1 class="t3" >concepto de git</h1>
                 <h2>concepto de git</h2>
                 <h3>concepto de git</h3>
                 <h4>concepto de git</h4>
                 <h5>concepto de git</h5>
                 <h6>concepto de git</h6>
-                <p class="p1s">Git es un sistema de control de versiones nos permite llevar un historial de todos los cambios que existan en un proyecto, sirve para documentar y trazar cada uno de los cambios, en pocas palabras es una "fotocopiadora" de archivos que registra cada cambio que se hace en un proyecto.</p>
+                <p>Git es un sistema de control de versiones nos permite llevar un historial de todos los cambios que existan en un proyecto, sirve para documentar y trazar cada uno de los cambios, en pocas palabras es una "fotocopiadora" de archivos que registra cada cambio que se hace en un proyecto.</p>
                 <h2>Principales comandos de Git</h2>
                 <ul>
                     <li><strong>GIT INIT:</strong> Este comando sirve para inicializar un proyecto con git.</li> 
